fabric/testdata/out/ing_spp-bulk-updater-reject-http-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      \u0026\u0026 Header(\"X-Forwarded-Proto\", \"http\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(400) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":400,\\\"detail\\\":\\\"TLS
      is required\\\",\\\"type\\\":\\\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\\\"}\")
      -\u003e \u003cshunt\u003e"},"labels":{"application":"spp-bulk-updater","controller-uid":"e586799c-5510-4a61-80cb-bead7c9b588a","deployment-id":"d-bifte6rn17yu4n5xcyopwz7fr","pipeline-id":"l-2pzi5f7y9tucwozo68dap5dcp2"},"name":"spp-bulk-updater-reject-http-route","namespace":"default"},"spec":{"rules":[{"host":"spp-bulk-updater.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-bulk-updater","servicePort":"http"},"pathType":"ImplementationSpecific"}]}}]}}'
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") && Header("X-Forwarded-Proto", "http")
      -> unverifiedAuditLog("sub") -> status(400) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":400,\"detail\":\"TLS is required\",\"type\":\"https://cloud.docs.zalando.net/howtos/ingress/#redirect-http-to-https\"}")
      -> <shunt>
  creationTimestamp: "2021-02-18T10:18:31Z"
  generation: 4
  labels:
    application: spp-bulk-updater
    controller-uid: e586799c-5510-4a61-80cb-bead7c9b588a
    deployment-id: d-bifte6rn17yu4n5xcyopwz7fr
    pipeline-id: l-2pzi5f7y9tucwozo68dap5dcp2
  name: spp-bulk-updater-reject-http-route
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-bulk-updater
    uid: e586799c-5510-4a61-80cb-bead7c9b588a
  resourceVersion: "1379110986"
  uid: dc29f8c2-26f6-45bb-8c45-3b9c92e5bb0d
spec:
  rules:
  - host: spp-bulk-updater.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-bulk-updater
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
